--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "dependencies": {
     "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.6.7",
     "graphql": "^16.3.0",
+    "mongoose": "^6.2.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
